WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65860
REGRESSION (
r87755
): WKView doesn't update when I drag files into a background Safari window
https://bugs.webkit.org/show_bug.cgi?id=65860
Summary
REGRESSION (r87755): WKView doesn't update when I drag files into a backgroun...
mitz
Reported
2011-08-08 10:14:32 PDT
REGRESSION (
r87755
): WKView doesn't update when I drag files into a background Safari window
Attachments
Schedule a layer flush when scheduling is re-enabled
(2.35 KB, patch)
2011-08-08 10:19 PDT
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-08-08 10:14:52 PDT
<
rdar://problem/9652350
>
mitz
Comment 2
2011-08-08 10:19:34 PDT
Created
attachment 103261
[details]
Schedule a layer flush when scheduling is re-enabled
mitz
Comment 3
2011-08-08 10:29:51 PDT
Fixed in <
http://trac.webkit.org/r92603
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug