<rdar://problem/9652350> REGRESSION (r87755): WKView doesn't update when I drag files into a background Safari window https://bugs.webkit.org/show_bug.cgi?id=65860

Reviewed by Simon Fraser.

When layer flush scheduling is re-enabled, schedule a layer flush, just in case one was requested while
scheduling was disabled. It doesn’t seem worthwhile to track whether that in fact happened, so do so
unconditionally.

* WebProcess/WebPage/ca/mac/LayerTreeHostCAMac.mm:
(WebKit::LayerTreeHostCAMac::setLayerFlushSchedulingEnabled):
* WebProcess/WebPage/ca/win/LayerTreeHostCAWin.cpp:
(WebKit::LayerTreeHostCAWin::setLayerFlushSchedulingEnabled):



git-svn-id: svn://svn.chromium.org/blink/trunk@92603 bbb929c8-8fbe-4397-9dbb-9b2b20218538