third_party/WebKit/Source/WebKit2/WebProcess/WebPage/ca/mac/LayerTreeHostCAMac.mm
@@ -96,8 +96,10 @@ void LayerTreeHostCAMac::setLayerFlushSchedulingEnabled(bool layerFlushingEnable
 
     m_layerFlushSchedulingEnabled = layerFlushingEnabled;
 
-    if (m_layerFlushSchedulingEnabled)
+    if (m_layerFlushSchedulingEnabled) {
+        scheduleLayerFlush();
         return;
+    }
 
     if (!m_flushPendingLayerChangesRunLoopObserver)
         return;
