third_party/WebKit/Source/WebKit2/WebProcess/WebPage/ca/win/LayerTreeHostCAWin.cpp
@@ -144,8 +144,10 @@ void LayerTreeHostCAWin::setLayerFlushSchedulingEnabled(bool layerFlushingEnable
 
     m_layerFlushSchedulingEnabled = layerFlushingEnabled;
 
-    if (m_layerFlushSchedulingEnabled)
+    if (m_layerFlushSchedulingEnabled) {
+        scheduleLayerFlush();
         return;
+    }
 
     LayerChangesFlusher::shared().cancelPendingFlush(this);
 }
